<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="kernel_week_index">第 %1$d 周</string>
    <string name="kernel_week_not_started">未开学</string>
    <string name="kernel_week_term_start_missing">未设置开学日期</string>

    <string name="kernel_weekday_monday">周一</string>
    <string name="kernel_weekday_tuesday">周二</string>
    <string name="kernel_weekday_wednesday">周三</string>
    <string name="kernel_weekday_thursday">周四</string>
    <string name="kernel_weekday_friday">周五</string>
    <string name="kernel_weekday_saturday">周六</string>
    <string name="kernel_weekday_sunday">周日</string>
    <string name="kernel_weekday_narrow_monday">一</string>
    <string name="kernel_weekday_narrow_tuesday">二</string>
    <string name="kernel_weekday_narrow_wednesday">三</string>
    <string name="kernel_weekday_narrow_thursday">四</string>
    <string name="kernel_weekday_narrow_friday">五</string>
    <string name="kernel_weekday_narrow_saturday">六</string>
    <string name="kernel_weekday_narrow_sunday">日</string>
    <string name="kernel_weekday_unknown">未知</string>

    <string name="kernel_holiday_new_year">元旦</string>
    <string name="kernel_holiday_spring_festival_eve">除夕</string>
    <string name="kernel_holiday_spring_festival">春节</string>
    <string name="kernel_holiday_qingming">清明节</string>
    <string name="kernel_holiday_labour_day">劳动节</string>
    <string name="kernel_holiday_dragon_boat">端午节</string>
    <string name="kernel_holiday_mid_autumn">中秋节</string>
    <string name="kernel_holiday_national_day">国庆节</string>
</resources>
